- Fixed page offset changes not properly being stored.
- Fixed a regression with exotic skills not picking up improvements. Fixes #3204
- Fixed issues with objects not moving correctly when dragged between locations. Fixes #3079
- Allowed gear to use forbidden and required nodes similar to those that can be used by qualities, cyberware, metamagics, and others.

Data Changes:

- Fixed Autopicker having an incorrect cost. Fixes #3167.
- Fixed an issue with Japanese translations of certain lifestyle qualities caused by duplicate entries. Fixes #3168.
- Added content from the German-exclusive sourcebook "Hamburg".
- Removed redundant 'Enable Spells and Spirits Tab' improvement. Closes #3189

New Strings:

- Checkbox_DiceRoller_VariableGlitch

Build 203

Application Changes:

- Fixed an issue with inability to remove cyberware added to vehicle plugins. Fixes #2918
- Fixed behaviour of custom improvement cxreation not properly connecting to a group.
- Fixed an issue with powers when toggling between rulesets with the option to use a second magic attribute for MysAds. Might be a fix for #2919 and #2917?
- Fixed the Household Gremlins lifestyle quality causing low-price houses to generate money.
- Fixed an issue with inability to remove metamagics or initiate grades in create mode.
- Fixed a crash when removing a mentor spirit quality if an adept character has changed their priority to mundane. Caused by MAG attribute being null. Fixes #2928
- Added support for drugcomponents.xml in the translator.
- Added missing Source detail for adept powers.
- Fixed a crash when loading old characters that have a Total Rating greater than the Total Maximum Levels on load.
- Fixed an issue with editing custom improvements causing them to visibly appear is if they had fallen out of their group.
- Exposed the DisplayName of objects to the Print method. Allows for melee weapons that have different names to be shown separately on a character sheet.