@@ -5059,5 +5059,33 @@
     </spell>
     <!-- End Region -->
     <!-- End Region -->
+    <!-- Region Better Than Bad -->
+    <spell>
+      <id>89046778-a77a-4f21-a448-a750af0898eb</id>
+      <name>Astral Disruption</name>
+      <page>158</page>
+      <source>BTB</source>
+      <category>Manipulation</category>
+      <damage>0</damage>
+      <descriptor>Mana</descriptor>
+      <duration>S</duration>
+      <dv>F-2</dv>
+      <range>LOS</range>
+      <type>M</type>
+    </spell>
+    <spell>
+      <id>4c595074-add0-40da-a707-598d2b94ae4f</id>
+      <name>Mass Astral Disruption</name>
+      <page>158</page>
+      <source>BTB</source>
+      <category>Manipulation</category>
+      <damage>0</damage>
+      <descriptor>Mana, Area</descriptor>
+      <duration>S</duration>
+      <dv>F</dv>
+      <range>LOS</range>
+      <type>M</type>
+    </spell>
+    <!-- End Region -->
   </spells>
 </chummer>
