@@ -12,6 +12,7 @@ Application Changes:
 - Fixed a regression with exotic skills not picking up improvements. Fixes #3204
 - Fixed issues with objects not moving correctly when dragged between locations. Fixes #3079
 - Allowed gear to use forbidden and required nodes similar to those that can be used by qualities, cyberware, metamagics, and others.
+- Implemented most content from Better Than Bad, with exception of life modules and the Hard Luck quality.
 
 Data Changes:
 
